--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "format": "prettier --write .",
     "lint": "eslint .",
     "start": "react-native start --reset-cache",
-    "test": "jest"
+    "test": "jest",
+    "storybook-generate": "sb-rn-get-stories",
+    "storybook-watch": "sb-rn-watcher"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -18,16 +20,27 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "^6.7.5",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native-community/slider": "^4.4.2",
+    "@storybook/addon-actions": "^6.5.14",
+    "@storybook/addon-controls": "^6.5.14",
+    "@storybook/addon-ondevice-actions": "6.5.0-rc.0",
+    "@storybook/addon-ondevice-controls": "6.5.0-rc.0",
+    "@storybook/react-native": "6.5.0-rc.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "babel-loader": "^8.3.0",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.8",
     "prettier": "^2.4.1",
+    "react-dom": "18.2.0",
+    "react-native-safe-area-context": "^4.5.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
