--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "storybook-watch": "sb-rn-watcher"
   },
   "dependencies": {
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.4"
   },
@@ -42,6 +43,7 @@
     "react-dom": "18.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.2.7",
     "typescript": "4.8.4"
   },
   "jest": {
