--- a/package.json
+++ b/package.json
@@ -3,19 +3,28 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "pods": "bundle install && bundle exec pod install --project-directory=ios/ --repo-update",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "format": "prettier --write .",
     "lint": "eslint .",
-    "start": "react-native start --reset-cache",
+    "kill-port": "lsof -t -i :8081 | xargs kill || true",
+    "watchman-reset": "watchman watch-del-all || true",
+    "adb-reverse": "adb reverse tcp:8081 tcp:8081 || true",
+    "start:packager": "react-native start --reset-cache",
+    "start": "yarn kill-port && yarn watchman-reset && yarn adb-reverse && yarn start:packager",
     "test": "jest",
-    "storybook-generate": "sb-rn-get-stories",
-    "storybook-watch": "sb-rn-watcher"
+    "storybook:generate": "sb-rn-get-stories",
+    "storybook:watch": "sb-rn-watcher"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "clsx": "^1.2.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-native": "0.71.4",
+    "react-native-screens": "^3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -36,6 +45,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "babel-loader": "^8.3.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.8",
