--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "clsx": "^1.2.1",
+    "immer": "^9.0.21",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.4",
-    "react-native-screens": "^3.20.0"
+    "react-native-screens": "^3.20.0",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
