--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -165,6 +165,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation 'com.jakewharton:process-phoenix:2.1.2'
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
